--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "build:sass": "sass  --no-source-map src/sass:public/css",
     "copy:html": "copyfiles -u 1 ./src/*.html public",
+    "copy:js": "copyfiles -u 1 ./src/*.js public",
     "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
     "copy": "npm-run-all --parallel copy:*",
     "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
+    "watch:js": "onchange \"src/*.js\" -- npm run copy:js",
     "watch:assets": "onchange \"src/assets/**/*\" -- npm run copy:assets",
     "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
     "watch": "npm-run-all --parallel watch:*",
